test/typecheck/y_error_06.j
class UWU
{
	Void main()
	{
		Int a;
		String b;
		println(a < b);
	}
}
